[gd_scene load_steps=3 format=3 uid="uid://dqw1olufrmm0c"]

[ext_resource type="Texture2D" path="res://art/caldera.png" id="1_4qqkn"]
[ext_resource type="Script" path="res://caldera_provisional.gd" id="1_uq7sg"]

[node name="Caldera" type="Node2D"]
script = ExtResource("1_uq7sg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(394, 389)
scale = Vector2(0.2915, 0.324541)
texture = ExtResource("1_4qqkn")

[node name="HeaterElementButton" type="Button" parent="."]
offset_left = 236.0
offset_top = 272.0
offset_right = 300.0
offset_bottom = 333.0
text = "H"

[node name="cantidad_coste" type="Label" parent="."]
offset_left = 237.0
offset_top = 367.0
offset_right = 277.0
offset_bottom = 390.0

[connection signal="pressed" from="HeaterElementButton" to="." method="_on_element_button_pressed"]
